--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
 
         </activity>
 
+        <service
+            android:name=".detail.DocNotificationService"
+            android:exported="true" />
+
     </application>
 
 </manifest>
