--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         applicationId "com.relferreira.docnumgen"
@@ -29,6 +35,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.realm:realm-android:0.87.5'
     compile 'br.com.caelum.stella:caelum-stella-core:2.1.2'
 
     androidTestCompile 'com.android.support:support-annotations:23.1.1'
