Refactor to Clean Architecture

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme"
         android:name=".DocApplication">
         <activity
-            android:name=".main.MainActivity"
+            android:name=".presentation.view.activity.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,13 +20,13 @@
         </activity>
 
         <activity
-            android:name=".detail.DetailActivity"
+            android:name=".presentation.view.activity.DetailActivity"
             android:label="@string/detail_toolbar">
 
         </activity>
 
         <service
-            android:name=".detail.DocNotificationService"
+            android:name=".presentation.service.DocNotificationService"
             android:exported="true" />
 
     </application>
